<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">YAUC</string>

    <!--menu-->
    <string name="action_login">Sign in</string>
    <string name="action_logout">Sign out</string>
    <string name="action_layout_grid">Grid</string>
    <string name="action_layout_list">List</string>
    <string name="action_invite">Recommend YAUC</string>
    <string name="action_feedback">Feedback</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>

    <!-- tabs -->
    <string name="content_description_tab_new">New photos</string>
    <string name="ga_name_tab_new">NewPhotos</string>
    <string name="content_description_tab_favorite">Your favorite photos</string>
    <string name="ga_name_tab_favorite">FavoritePhotos</string>
    <string name="content_description_tab_own">Your own photos</string>
    <string name="ga_name_tab_own">OwnPhotos</string>

    <!--oauth authorization-->
    <string name="unsplash_authorization_url">https://unsplash.com/oauth/authorize?client_id=%1$s&amp;redirect_uri=yauc://redirect-uri&amp;response_type=code&amp;scope=%2$s</string>
    <string name="unsplash_authorization_redirect_uri">yauc://redirect-uri</string>
    <string name="unsplash_redirect_uri_scheme">yauc</string>

    <!--login -->
    <string name="title_activity_login">Sign in at Unsplash</string>
    <string name="message_failure_login">Sign in failed. Please try again.</string>
    <string name="message_login">Hello %1$s!</string>
    <string name="unknown_user_name">Unsplasher</string>
    <string name="message_ask_logout">Really want to sign out?</string>
    <string name="message_logout">You have been signed out.</string>

    <!--buttons-->
    <string name="button_yes">@android:string/yes</string>
    <string name="button_dialog_dismiss">Not now</string>
    <string name="button_dialog_positive">Sign in</string>
    <string name="button_empty_photo_list_login">Sign in</string>
    <string name="button_empty_photo_list_fetch">Reload</string>
    <string name="button_detail_share">Share</string>
    <string name="button_detail_share_content_description">Share photo</string>
    <string name="button_detail_info">About</string>
    <string name="button_detail_download">Download</string>
    <string name="button_detail_info_content_description">Information about photo</string>
    <string name="button_detail_download_content_description">Download photo</string>
    <string name="button_detail_like_content_description">Like photo</string>
    <string name="button_detail_unlike_content_description">Unlike photo</string>

    <!-- welcome dialog -->
    <string name="dialog_welcome_title">Welcome to YAUC</string>
    <string name="dialog_welcome_message">YAUC helps you staying up-to-date with https://unsplash.com. To see your favorites and own photos you need to authorize YAUC and sign in to unsplash.com.</string>

    <!-- photo list -->
    <string name="text_anonymous_photo_list">Please sign in to see photos.</string>
    <string name="text_empty_photo_list">Cannot find any photos.</string>
    <string name="text_empty_photo_list_swipe_to_refresh">No photos found, swipe down to refresh.</string>
    <string name="photo_transition_name" translatable="false">sharedElementPhoto</string>

    <string name="title_activity_information">About Photo</string>

    <!-- detail -->
    <string name="ga_name_detail_activity">PhotoDetail</string>
    <string name="text_author">Photo by %1$s</string>
    <string name="content_description_photo">Detail view of photo</string>
    <string name="share_title">Share photo</string>
    <string name="share_text">Hey, look what an awesome photo i have found %1$s</string>
    <string name="like_dialog_sign_in_message">You have to sign in to like photos.</string>
    <string name="liked_message">Photo added to favorites.</string>
    <string name="unliked_message">Photo removed from favorites.</string>
    <string name="downloaded_title">YAUC Download</string>
    <string name="downloaded_message">Saved %1$s.</string>
    <string name="downloaded_permission_denied">Sorry, cannot download without permission to write.</string>
    <string name="photo_not_found">Arrrgh, photo not found, sorry.</string>

    <!-- information about photo -->
    <string name="ga_name_information_activity">PhotoInformation</string>
    <string name="content_description_profile">Photo of %1$s</string>
    <string name="information_published_at">Published</string>
    <string name="information_camera">Camera</string>
    <string name="information_exposure">Exposure</string>
    <string name="information_location">Location</string>
    <string name="information_make_model">%1$s %2$s</string>
    <string name="information_photo_size">Dimensions %1$d x %2$d</string>
    <string name="information_photo_iso">ISO %1$d</string>
    <string name="information_photo_aperture">Aperture %1$s</string>
    <string name="information_photo_exposure_time">Exposure Time %1$s</string>
    <string name="information_photo_focal_length">Focal Length %1$s</string>
    <string name="information_location_data">%1$s %2$s</string>

    <!-- new photos widget -->
    <string name="appwidget_text">YAUC</string>
    <string name="widget_new_photos_text" tools:ignore="PluralsCandidate">%1$d new photos</string>

    <!-- edit photo dialog -->
    <string name="ga_name_edit_photo_activity">PhotoEdit</string>
    <string name="edit_text_dialog_title">Edit Photo</string>
    <string name="edit_text_location_country">Country</string>
    <string name="edit_text_location_city">City</string>
    <string name="edit_text_exif_camera">Camera manufacturer</string>
    <string name="edit_text_exif_model">Camera model</string>
    <string name="edit_text_exif_exposure_aperture">Aperture (f)</string>
    <string name="edit_text_exif_exposure_aperture_min">Should be greater than 0.5</string>
    <string name="edit_text_exif_exposure_aperture_max">Should be less than 256</string>
    <string name="edit_text_exif_exposure_time">Exposure time (sec)</string>
    <string name="edit_text_exif_exposure_time_min">Should be greater than 0.00005</string>
    <string name="edit_text_exif_exposure_time_max">Should be less than 86400</string>
    <string name="edit_text_exif_exposure_focal_length">Focal length (mm)</string>
    <string name="edit_text_exif_exposure_focal_length_min">Should be greater than 1</string>
    <string name="edit_text_exif_exposure_focal_length_max">Should be less than 2000</string>
    <string name="edit_text_exif_exposure_iso">ISO</string>
    <string name="edit_text_exif_exposure_iso_min">Should be greater than 25</string>
    <string name="edit_text_exif_exposure_iso_max">Should be less than 409600</string>
    <string name="edit_photo_loading">Just one moment, fetching actual photo data …</string>
    <string name="edit_photo_loading_failed_message">Cannot fetch actual data, watch out not to overwrite attributes.</string>

    <!-- Google Analytics -->
    <string name="ga_category_action">Action</string>
    <string name="ga_action_share">Share</string>
    <string name="ga_action_like">Like</string>
    <string name="ga_action_unlike">Unlike</string>

    <!-- notifications -->
    <string name="notification_title">New Photos</string>
    <plurals name="notification_text">
        <item quantity="one">Unsplash has %1$d new photo</item>
        <item quantity="other">Unsplash has %1$d new photos</item>
    </plurals>

    <!-- general messages -->
    <string name="message_network_failed">A network error occurred. Please check your connectivity and try again.</string>

    <!-- app invites -->
    <string name="invitation_title">Recommend YAUC</string>
    <string name="invitation_message">Hey! Do you know YAUC?\n</string>
    <string name="invitation_email_subject">YAUC: Stay up-to-date with Unsplash</string>
    <string name="invitation_email_body"><![CDATA[
        <div style=\"font-family: sans-serif;text-align:center;\">
        <a href=\"%%APPINVITE_LINK_PLACEHOLDER%%\"><img src=\"https://fir-yauc.firebaseapp.com/i/invitationImage.jpg\"></a>
        <p>Have a look at <a href=\"%%APPINVITE_LINK_PLACEHOLDER%%\">YAUC</a>, the Android&trade; App that keeps you up-to-date with <a href=\"https://unsplash.com/\">Unsplash - Free (do whatever you want) high-resolution photos.</a>.</p>
        <p><a href=\"%%APPINVITE_LINK_PLACEHOLDER%%\"><img alt=\"Get it on Google Play\" width=\"200px\" src=\"https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png\"/></a></p>
        </div>
    ]]></string>

    <!-- Feedback -->
    <string name="feedback_email_subject">Problems/Wishes using YAUC</string>
</resources>
