<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/emptyLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewEmpty"
        android:text="@string/text_anonymous_photo_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Body1"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:text="@string/button_empty_photo_list_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_account_box_white"
        android:drawablePadding="8dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        style="@style/Widget.AppCompat.Button.Colored" />
    <Button
        android:id="@+id/buttonFetch"
        android:text="@string/button_empty_photo_list_fetch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_refresh_white"
        android:drawablePadding="8dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        style="@style/Widget.AppCompat.Button.Colored" />
</LinearLayout>