<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.bitsailer.yauc.ui.DetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent"
        tools:targetApi="lollipop" />
    <TextView
        android:id="@+id/textViewEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/photo_not_found"/>

    <ImageView
        android:id="@+id/fullscreenPhoto"
        android:contentDescription="@string/content_description_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gradient_content_size_top"
            android:background="@drawable/background_gradient_top_down"
            android:layout_gravity="top"
            android:gravity="start"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/gradient_content_padding_top"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:text="Photo by John Doe"
            tools:ignore="HardcodedText">
        </TextView>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gradient_content_size_bottom"
            android:paddingBottom="@dimen/gradient_content_padding_bottom"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:background="@drawable/background_gradient_down_top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonShare"
                style="@style/FullscreenTheme.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_detail_share_content_description"
                android:drawableTop="@drawable/ic_share_white"
                android:text="@string/button_detail_share" />
            <Button
                android:id="@+id/buttonLike"
                style="@style/FullscreenTheme.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_favorite_border_white"
                android:text="0"
                tools:ignore="HardcodedText" />
            <Button
                android:id="@+id/buttonInfo"
                style="@style/FullscreenTheme.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_info_outline_white"
                android:contentDescription="@string/button_detail_info_content_description"
                android:text="@string/button_detail_info" />

        </LinearLayout>
    </FrameLayout>

</merge>
