<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:scrollbars="none">

    <GridLayout
        android:orientation="horizontal"
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_photo_horizontal_margin"
        android:layout_marginEnd="@dimen/edit_photo_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <FrameLayout
            android:layout_width="@dimen/list_icon_size"
            android:layout_height="@dimen/list_icon_size"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1">
            <ImageView
                android:src="@drawable/ic_photo_camera"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/exifCameraMaker"
                style="?attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_exif_camera"
                tools:text="NIKON"
                android:inputType="text|textAutoComplete|textAutoCorrect"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_icon_size"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/exifCameraModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_exif_model"/>
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"
            android:layout_columnSpan="2" />

        <FrameLayout
            android:layout_width="@dimen/list_icon_size"
            android:layout_height="@dimen/list_icon_size"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1">
            <ImageView
                android:src="@drawable/ic_camera"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/exifAperture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_exif_exposure_aperture"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_icon_size"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/exifExposureTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_exif_exposure_time"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_icon_size"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/exifFocalLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_exif_exposure_focal_length"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_icon_size"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/exifIso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_exif_exposure_iso"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"
            android:layout_columnSpan="2" />

        <FrameLayout
            android:layout_width="@dimen/list_icon_size"
            android:layout_height="@dimen/list_icon_size"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1">
            <ImageView
                android:src="@drawable/ic_place"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/locationCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_location_country"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_icon_size"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/locationCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_location_city"/>
        </android.support.design.widget.TextInputLayout>

    </GridLayout>

</ScrollView>
